# Ajaryx-s-Dinorun-Edition

./: CMakeLists.txt  README.md
include/: GameDefines.hpp  PCH.hpp  TextureAtlaseDefines.hpp
include/Game/: Layer.hpp  MainGame.hpp  Player.hpp
include/core/: Game.hpp  GameWindow.hpp
src/: CMakeLists.txt  main.cpp
src/Game/: CMakeLists.txt  Layer.cpp  MainGame.cpp  Player.cpp
src/core/: CMakeLists.txt  Game.cpp  GameWindow.cpp
